# Project-Stalker

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle  conda_rapids_backup.yml  docker-compose.yml  openapi.yaml  rapids_25_10_environment.yml  rapids_25_10_lock.txt  seed_saica_sensors.py  seed_sensors.sql  settings.gradle
app/: build.gradle
app/src/main/resources/: logback.xml
backend/projectstalker/: build.gradle
backend/projectstalker/config/: RiverConfig.java
backend/projectstalker/domain/river/: RiverGeometry.java
compute-engine/: build.gradle
compute-engine/src/main/resources/: application-mock.properties  application.properties  schema.sql
compute-engine/src/test/resources/: application.properties  schema.sql
core-domain/: build.gradle
data/changelog/: Manning_stateless_to_stateful_smart_fetch
data/datasets/: saica_stations_maestro_coords.json
data/datasets/raw/: Aristas_grafo_v1.csv  C302_AMONIO.json  C303_CONDUCTIVIDAD.json  C303_PH.json  C303_TEMPERATURA.json  C304_PH.json  C306_AMONIO.json  C306_CONDUCTIVIDAD.json  C308_AMONIO.json  C309_NIVEL.json  C309_PH.json  C310_AMONIO.json  C310_TURBIDEZ.json  C312_AMONIO.json  C312_PH.json  C313_PH.json  C313_TURBIDEZ.json  C314_CARBONO_ORGANICO.json  C314_TURBIDEZ.json  C315_AMONIO.json  C315_CARBONO_ORGANICO.json  C315_NITRATOS.json  C315_TURBIDEZ.json  C316_CONDUCTIVIDAD.json  C316_PH.json  C320_OXIGENO_DISUELTO.json  C321_OXIGENO_DISUELTO.json  C321_TEMPERATURA.json  C322_AMONIO.json  C322_PH.json  C322_TURBIDEZ.json  C323_CARBONO_ORGANICO.json  C323_CONDUCTIVIDAD.json  C323_TURBIDEZ.json  C325_CLOROFILA.json  C325_TEMPERATURA.json  C325_TURBIDEZ.json  C326_AMONIO.json  C327_AMONIO.json  C327_FOSFATOS.json  (+31 more)
data/datasets/raw/batch1/: C302_CONDUCTIVIDAD.json  C302_NITRATOS.json  C302_OXIGENO_DISUELTO.json  C302_PH.json  C302_TEMPERATURA.json  C302_TURBIDEZ.json  C303_CLOROFILA.json  C303_FICOCIANINAS.json  C303_OXIGENO_DISUELTO.json  C303_TURBIDEZ.json  C304_AMONIO.json  C304_CARBONO_ORGANICO.json  C304_CONDUCTIVIDAD.json  C304_FOSFATOS.json  C304_NIVEL.json  C304_OXIGENO_DISUELTO.json  C304_TEMPERATURA.json  C304_TURBIDEZ.json  C306_NIVEL.json  (+140 more)
desktop-ui/: build.gradle
dev-tools/: docker-compose.yml
dev-tools/docker-data/: 01-extensions.sql  02-schema.sql
native-lib/: build.gradle
notebooks/: .gitignore  Analisis de contaminantes en el rio.ipynb  Analisis_de_contaminantes_en_el_rio v1.ipynb  Analisis_de_contaminantes_en_el_rio_v2.ipynb  Análisis del Censo de autorizados a verter.ipynb  Benchmark 5090.ipynb  Censo de autorizados a verter.ipynb  Inputación avanzada - Flatline cleaner.ipynb  Inputación_avanzada_Flatline_cleaner.ipynb  Proyecto_Computación_I.ipynb  Serializacion_parquet.ipynb  docker-compose.yml  prometheus.yml
python/: 01_json_a_parquet.py  02_control_calidad.py  03_enriquecimiento_outliers.py  Dockerfile.inference  main_pipeline.py
python/inference_service/: main.py
python/pipeline/: database.py  ingest.py  interfaces.py  metrics.py
python/pipeline/cleaning/: __init__.py  config.py  flatline.py  hard_limits.py  infilling.py  pipeline.py  temporal.py
python/pipelinev1_tadeo/: 01_json_a_parquet.py  02_control_calidad.py  03_enriquecimiento_outliers.py
python/scrapper/: cht-js-datos_tiempo_real.py  cht-js-recolector.py  cht-js-scrapper-initiator.py  cht-js-station_index.py  cht-js-stations-utm.py
scraper/: cht-scrapper-home-response.py
(+570 files in other folders)
